--- a/package.json
+++ b/package.json
@@ -1,14 +1,14 @@
 {
   "name": "nodebb-plugin-jwt",
-  "version": "0.2.1",
-  "description": "plugin for NodeBB to generate JWT",
+  "version": "0.2.2",
+  "description": "plugin for NodeBB 0.7 to generate JWT",
   "main": "library.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "repository": {
     "type": "git",
-    "url": "https://github.com/bsparks/nodebb-plugin-jwt.git"
+    "url": "https://github.com/yvtong/nodebb-plugin-jwt.git"
   },
   "keywords": [
     "nodebb",
@@ -19,9 +19,9 @@
   "author": "Ben Sparks",
   "license": "MIT",
   "bugs": {
-    "url": "https://github.com/bsparks/nodebb-plugin-jwt/issues"
+    "url": "https://github.com/yvtong/nodebb-plugin-jwt/issues"
   },
-  "homepage": "https://github.com/bsparks/nodebb-plugin-jwt",
+  "homepage": "https://github.com/yvtong/nodebb-plugin-jwt",
   "dependencies": {
     "jsonwebtoken": "^1.3.0",
     "lodash": "^2.4.1"
